--- a/css/cosmetic.css
+++ b/css/cosmetic.css
@@ -36,7 +36,7 @@ body{
 .price{
   font-size: 24px;
   font-weight: 500;
-  padding: 25px 0;
+  padding: 30px 0;
   border-bottom: 2px solid #d7d7d7;
 }
 
@@ -45,16 +45,24 @@ body{
   font-size: 14px;
 }
 
+.products{
+  margin-top: 100px;
+  width: 100px;
+  height: 100px;
+}
+
 .price a{
   font-weight: 500;
   font-size: 15px;
   border: 1.5px solid #333;
-  padding: 3px 3px;
+  padding: 5px 10px;
   border-radius: 10px;
   margin-left: 15px;
   display: block;
   float: left;
   margin-right: 150px;
+  margin-bottom: 50px;
+  margin-top: -5px;
 }
 
 .price a:hover{
@@ -84,14 +92,9 @@ td{
   margin-bottom: 100px;
 }
 
-.color .skyblue{
-  display: inline-block;
-  background-color: #9ab6c1;
-  border: 1.5px solid #333;
-  width: 55px;
-  height: 30px;
-  border-radius: 10px;
-  
+#products{
+  width: 65px;
+  padding: 5px 0;
 }
 
 .size a{
