--- a/css/cosmetic.css
+++ b/css/cosmetic.css
@@ -45,12 +45,6 @@ body{
   font-size: 14px;
 }
 
-.products{
-  margin-top: 100px;
-  width: 100px;
-  height: 100px;
-}
-
 .price a{
   font-weight: 500;
   font-size: 15px;
@@ -92,9 +86,14 @@ td{
   margin-bottom: 100px;
 }
 
-#products{
-  width: 65px;
-  padding: 5px 0;
+.color .skyblue{
+  display: inline-block;
+  background-color: #9ab6c1;
+  border: 1.5px solid #333;
+  width: 55px;
+  height: 30px;
+  border-radius: 10px;
+  
 }
 
 .size a{
