--- a/css/cosmetic.css
+++ b/css/cosmetic.css
@@ -36,7 +36,7 @@ body{
 .price{
   font-size: 24px;
   font-weight: 500;
-  padding: 30px 0;
+  padding: 25px 0;
   border-bottom: 2px solid #d7d7d7;
 }
 
@@ -49,14 +49,12 @@ body{
   font-weight: 500;
   font-size: 15px;
   border: 1.5px solid #333;
-  padding: 5px 10px;
+  padding: 3px 3px;
   border-radius: 10px;
   margin-left: 15px;
   display: block;
   float: left;
   margin-right: 150px;
-  margin-bottom: 50px;
-  margin-top: -5px;
 }
 
 .price a:hover{
@@ -216,6 +214,11 @@ td{
   font-weight: bold;
   color: #333;
   padding-bottom: 20px;
+  padding-left: 5px;
+}
+
+.infor p{
+  padding-left: 9px;
 }
 
 .infor table{
@@ -311,7 +314,7 @@ td{
 }
 
 .notice2{
-  width: 1005px;
+  width: 1000px;
   margin: auto;
   margin-top: 15px;
 }
