--- a/css/swimsuit.css
+++ b/css/swimsuit.css
@@ -26,7 +26,6 @@ body{
 
 .product_in h2{
   padding-bottom: 45px;
-  background: url(../images/44_120.png) no-repeat 170px 3px;
 }
 
 .product_in p{
@@ -50,17 +49,14 @@ body{
   font-weight: 500;
   font-size: 15px;
   border: 1.5px solid #333;
-  padding: 5px 10px;
+  padding: 3px 3px;
   border-radius: 10px;
   margin-left: 15px;
-  display: block;
-  float: left;
-  margin-right: 150px;
-  margin-top: -5px;
+  display: inline-block;
 }
 
 .price a:hover{
-  background-color: #77bbcc;
+  background-color: #333;
   color: #fff;
 }
 
@@ -86,29 +82,9 @@ td{
   margin-bottom: 100px;
 }
 
-.color .black{
+.color .skyblue{
   display: inline-block;
-  background-color: #000;
-  border: 1.5px solid #333;
-  width: 55px;
-  height: 30px;
-  border-radius: 10px;
-  
-}
-
-.color .white{
-  display: inline-block;
-  background-color: #fff;
-  border: 1.5px solid #333;
-  width: 55px;
-  height: 30px;
-  border-radius: 10px;
-  
-}
-
-.color .lemon{
-  display: inline-block;
-  background-color: #e3d978;
+  background-color: #9ab6c1;
   border: 1.5px solid #333;
   width: 55px;
   height: 30px;
@@ -271,7 +247,7 @@ td{
 }
 
 .notice2{
-  width: 1000px;
+  width: 1005px;
   margin: auto;
   margin-top: 15px;
 }
